--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,91 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>LedaFront</title>
+  <title>Les Étoiles d'Aurore | Pilates, Reformer & Coaching à Saint-Martin-d'Hères</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Les Étoiles d'Aurore : cours de Pilates Mat, Reformer, Mobilité et CrossFit à Saint-Martin-d'Hères (Grenoble). Coaching personnalisé par Aurore Lemire, coach certifiée avec plus de 10 ans d'expérience.">
+  <meta name="keywords" content="pilates, reformer, mobilité, crossfit, coaching, fitness, saint-martin-d'hères, grenoble, aurore lemire, cours collectifs, coaching individuel, bien-être, sport">
+  <meta name="author" content="Les Étoiles d'Aurore">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#56bdba">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://lesetoilesdaurore.fr/">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lesetoilesdaurore.fr/">
+  <meta property="og:title" content="Les Étoiles d'Aurore | Pilates, Reformer & Coaching">
+  <meta property="og:description" content="Cours de Pilates, Reformer, Mobilité et CrossFit à Saint-Martin-d'Hères. Coaching personnalisé par Aurore Lemire.">
+  <meta property="og:image" content="https://lesetoilesdaurore.fr/assets/og-image.jpg">
+  <meta property="og:locale" content="fr_FR">
+  <meta property="og:site_name" content="Les Étoiles d'Aurore">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Les Étoiles d'Aurore | Pilates, Reformer & Coaching">
+  <meta name="twitter:description" content="Cours de Pilates, Reformer, Mobilité et CrossFit à Saint-Martin-d'Hères. Coaching personnalisé par Aurore Lemire.">
+  <meta name="twitter:image" content="https://lesetoilesdaurore.fr/assets/og-image.jpg">
+
+  <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet">
+
+  <!-- JSON-LD Structured Data: LocalBusiness -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HealthAndBeautyBusiness",
+    "name": "Les Étoiles d'Aurore",
+    "description": "Cours de Pilates Mat, Reformer, Mobilité et CrossFit à Saint-Martin-d'Hères. Coaching personnalisé.",
+    "url": "https://lesetoilesdaurore.fr",
+    "image": "https://lesetoilesdaurore.fr/logo.png",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "15 rue du Béal",
+      "addressLocality": "Saint-Martin-d'Hères",
+      "postalCode": "38400",
+      "addressCountry": "FR"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 45.1667,
+      "longitude": 5.77
+    },
+    "founder": {
+      "@type": "Person",
+      "name": "Aurore Lemire",
+      "jobTitle": "Coach Fitness & Pilates"
+    },
+    "priceRange": "€€",
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "08:00",
+        "closes": "20:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "09:00",
+        "closes": "13:00"
+      }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/lesetoilesdaurorecoaching/"
+    ]
+  }
+  </script>
 </head>
 <body>
   <app-root></app-root>
